phase3-IaC-automation/terraform-sysdev-ec2/subnets.tf
data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_subnet" "public" {
  count                   = 2
  vpc_id                  = aws_vpc.main.id
  cidr_block              = cidrsubnet(aws_vpc.main.cidr_block, 8, count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name        = "webhost-prod-public-${data.aws_availability_zones.available.names[count.index]}"
    Environment = "prod"
    System      = "webhost"
    Tier        = "public"
  }
}

resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.main.id
  cidr_block        = cidrsubnet(aws_vpc.main.cidr_block, 8, 10 + count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name        = "webhost-prod-private-${data.aws_availability_zones.available.names[count.index]}"
    Environment = "prod"
    System      = "webhost"
    Tier        = "private"
  }
}
