phase3-IaC-automation/terraform-sysdev-ec2/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true 
  enable_dns_hostnames = true

  tags = {
    Name = "webhost-prod-vpc"
    Environment = "prod"
    System = "webhost"
  }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
      Name = "webhost-prod-igw"
      Environment = "prod"
      System = "webhost"
    }
}
